<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212930"
    tools:context=".JoinSessionActivity"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backButton"
        android:textColor="@color/white"
        android:text="@string/homeButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="18sp"
        android:onClick="goHome"/>

    <TextView
        android:id="@+id/joinSessionPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        android:textColor="@color/white"
        android:text="@string/joinSessionPrompt"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textSize="30sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/goHomeReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/joinSessionPrompt"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:text="@string/goHomeReminderText"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/joinInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/goHomeReminder"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/joinSessionPromptHint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@drawable/border"
        android:padding="10dp"
        android:inputType="text"
        android:imeOptions="actionSearch"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/joinInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:text="@string/submit"
        android:layout_marginTop="15dp"
        app:cornerRadius="15dp"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        android:textAllCaps="false"
        android:onClick="onSubmitJoinSession"/>

</androidx.constraintlayout.widget.ConstraintLayout>