<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".session.UsernamePromptFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backButtonUsername"
        android:textColor="@color/white"
        android:text="@string/homeButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/usernamePromptHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButtonUsername"
        android:textColor="@color/white"
        android:text="@string/usernamePromptHeader"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textSize="30sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/visibilityReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernamePromptHeader"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:text="@string/usernamePromptVisibilty"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/visibilityReminder"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/displayNameLiteral"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@drawable/border"
        android:padding="10dp"
        android:inputType="text"
        android:imeOptions="actionSearch"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/usernameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:text="@string/submit"
        android:layout_marginTop="15dp"
        app:cornerRadius="15dp"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        android:textAllCaps="false" />

</androidx.constraintlayout.widget.ConstraintLayout>